--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -2427,3 +2427,46 @@
 "faves_many" = "$1 закладок";
 "faves_other" = "$1 закладок";
 
+/* Timezones */
+
+"ui_settings_timezone" = "Часовой пояс";
+"timezone_change_success" = "Настройка часового пояса успешно сохранена. Учтите, что эта настройка действует только в пределах этого браузера.";
+
+"timezone-720" = "(GMT-12): Остров Бейкер, Хауленд";
+"timezone-660" = "(GMT-11): Паго-Паго, Ниуэ, Мидуэй";
+"timezone-600" = "(GMT-10): Гонолулу, Папеэте, Адак";
+"timezone-540" = "(GMT-09): Анкоридж, Фэрбанкс, Джуно";
+"timezone-480" = "(GMT-08): Лос-Анджелес, Ванкувер, Тихуана";
+"timezone-420" = "(GMT-07): Денвер, Эдмонтон, Финикс";
+"timezone-360" = "(GMT-06): Мехико, Чикаго, Гватемала";
+"timezone-300" = "(GMT-05): Нью-Йорк, Торонто, Гавана";
+"timezone-270" = "(GMT-04:30): Каракас, Маракайбо";
+"timezone-240" = "(GMT-04): Сантьяго, Ла-Пас, Галифакс";
+"timezone-210" = "(GMT-03:30): Сент-Джонс (Ньюфаундленд)";
+"timezone-180" = "(GMT-03): Буэнос-Айрес, Сан-Паулу, Монтевидео";
+"timezone-120" = "(GMT-02): Южная Георгия";
+"timezone-60" = "(GMT-01): Азорские острова, Прая";
+"timezone-0" = "(GMT): Лондон, Лиссабон, Касабланка";
+"timezone--60" = "(GMT+1): Берлин, Париж, Рим";
+"timezone--120" = "(GMT+2): Калининград (МСК-1), Киев, Каир";
+"timezone--180" = "(GMT+3): Москва, Стамбул, Минск";
+"timezone--210" = "(GMT+3:30): Тегеран, Исфахан";
+"timezone--240" = "(GMT+4): Самара (МСК+1), Дубай, Баку";
+"timezone--270" = "(GMT+4:30): Кабул, Кандагар";
+"timezone--300" = "(GMT+5): Екатеринбург (МСК+2), Ташкент, Карачи";
+"timezone--330" = "(GMT+5:30): Нью-Дели, Мумбаи, Коломбо";
+"timezone--345" = "(GMT+5:45): Катманду, Покхара";
+"timezone--360" = "(GMT+6): Омск (МСК+3), Алматы, Дакка";
+"timezone--390" = "(GMT+6:30): Янгон (Рангун), Нейпьидо";
+"timezone--420" = "(GMT+7): Новосибирск (МСК+4), Красноярск, Бангкок";
+"timezone--480" = "(GMT+8): Иркутск (МСК+5), Пекин, Сингапур";
+"timezone--510" = "(GMT+8:30): Пхеньян";
+"timezone--540" = "(GMT+9): Якутск (МСК+6), Токио, Сеул";
+"timezone--570" = "(GMT+9:30): Аделаида, Дарвин";
+"timezone--600" = "(GMT+10): Владивосток (МСК+7), Сидней, Мельбурн";
+"timezone--630" = "(GMT+10:30): Лорд-Хау";
+"timezone--660" = "(GMT+11): Магадан (МСК+8), Сахалин, Чокурдах";
+"timezone--720" = "(GMT+12): Камчатка (МСК+9), Анадырь, Окленд";
+"timezone--765" = "(GMT+12:45): Острова Чатем";
+"timezone--780" = "(GMT+13): Нукуалофа, Апиа";
+"timezone--840" = "(GMT+14): Киритимати (о-ва Лайн)";
