--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -393,13 +393,13 @@
 "group_closed_post" = "Закрытая";
 "suggest_new" = "Предложить новость";
 "suggested_by_you_zero" = "$1 предложенных вами записей";
-"suggested_by_you_one" = "Одна предложенная вами запись";
+"suggested_by_you_one" = "$1 предложенная вами запись";
 "suggested_by_you_few" = "$1 предложенные вами записи";
 "suggested_by_you_many" = "$1 предложенных вами записей";
 "suggested_by_you_other" = "$1 предложенных вами записей";
 
 "suggested_by_everyone_zero" = "$1 предложенных записей";
-"suggested_by_everyone_one" = "Одна предложенная запись";
+"suggested_by_everyone_one" = "$1 предложенная запись";
 "suggested_by_everyone_few" = "$1 предложенные записи";
 "suggested_by_everyone_many" = "$1 предложенных записей";
 "suggested_by_everyone_other" = "$1 предложенных записей";
@@ -419,13 +419,13 @@
 
 "publishing_suggested_post" = "Публикация предложенной записи";
 "suggested_posts_in_group_zero" = "Вы посмотрели всю предложку, поздравляю!";
-"suggested_posts_in_group_one" = "В эту группу предложили одну запись";
+"suggested_posts_in_group_one" = "В эту группу предложили $1 запись";
 "suggested_posts_in_group_few" = "В эту группу предложили $1 записи";
 "suggested_posts_in_group_many" = "В эту группу предложили $1 записей";
 "suggested_posts_in_group_other" = "В эту группу предложили $1 записей";
 
 "suggested_posts_in_group_by_you_zero" = "Вы не предлагали в эту группу никаких записей";
-"suggested_posts_in_group_by_you_one" = "Вы предложили в эту группу одну запись";
+"suggested_posts_in_group_by_you_one" = "Вы предложили в эту группу $1 запись";
 "suggested_posts_in_group_by_you_few" = "Вы предложили в эту группу $1 записи";
 "suggested_posts_in_group_by_you_many" = "Вы предложили в эту группу $1 записей";
 "suggested_posts_in_group_by_you_other" = "Вы предложили в эту группу $1 записей";
@@ -451,20 +451,20 @@
 "group_changeowner_modal_text" = "Внимание! Вы передаёте права владельца пользователю $1. Это действие необратимо. После передачи вы останетесь админстратором, но сможете легко перестать им быть.";
 "group_owner_setted" = "Новый владелец ($1) успешно назначен в сообщество $2. Вам выданы права администратора в сообществе. Если Вы хотите вернуть роль владельца, обратитесь в <a href='/support?act=new'>техническую поддержку сайта</a>.";
 "participants_zero" = "Ни одного участника";
-"participants_one" = "Один участник";
+"participants_one" = "$1 участник";
 "participants_few" = "$1 участника";
 "participants_many" = "$1 участников";
 "participants_other" = "$1 участников";
 "groups_zero" = "Ни одной группы";
-"groups_one" = "Одна группа";
+"groups_one" = "$1 группа";
 "groups_few" = "$1 группы";
 "groups_many" = "$1 групп";
 "groups_other" = "$1 групп";
 "groups_list_zero" = "Вы не состоите ни в одной группе";
-"groups_list_one" = "Вы состоите в одной группе";
+"groups_list_one" = "Вы состоите в $1 группе";
 "groups_list_other" = "Вы состоите в $1 группах";
 "meetings_zero" = "Ни одной встречи";
-"meetings_one" = "Одна встреча";
+"meetings_one" = "$1 встреча";
 "meetings_few" = "$1 встречи";
 "meetings_many" = "$1 встреч";
 "meetings_other" = "$1 встреч";
@@ -496,12 +496,12 @@
 "avatar_album" = "Фотографии со страницы";
 "wall_album" = "Фотографии со стены";
 "albums_zero" = "Ни одного альбома";
-"albums_one" = "Один альбом";
+"albums_one" = "$1 альбом";
 "albums_few" = "$1 альбома";
 "albums_many" = "$1 альбомов";
 "albums_other" = "$1 альбомов";
 "albums_list_zero" = "У Вас нет ни одного альбома";
-"albums_list_one" = "У Вас один альбом";
+"albums_list_one" = "У Вас $1 альбом";
 "albums_list_few" = "У Вас $1 альбома";
 "albums_list_many" = "У Вас $1 альбомов";
 "albums_list_other" = "У Вас $1 альбомов";
@@ -556,7 +556,7 @@
 "upload_new_photo" = "Загрузить новую фотографию";
 
 "is_x_photos_zero" = "Всего ноль фотографий.";
-"is_x_photos_one" = "Всего одна фотография.";
+"is_x_photos_one" = "Всего $1 фотография.";
 "is_x_photos_few" = "Всего $1 фотографии.";
 "is_x_photos_many" = "Всего $1 фотографий.";
 "is_x_photos_other" = "Всего $1 фотографий.";
@@ -583,12 +583,12 @@
 "note_preview_empty_err" = "Зачем вам предпросмотр для заметки без имени или содержания?";
 "edited" = "Отредактировано";
 "notes_zero" = "Ни одной заметки";
-"notes_one" = "Одна заметка";
+"notes_one" = "$1 заметка";
 "notes_few" = "$1 заметки";
 "notes_many" = "$1 заметок";
 "notes_other" = "$1 заметок";
 "notes_list_zero" = "Не найдено ни одной заметки";
-"notes_list_one" = "Найдена одна заметка";
+"notes_list_one" = "Найдена $1 заметка";
 "notes_list_few" = "Найдено $1 заметки";
 "notes_list_many" = "Найдено $1 заметок";
 "notes_list_other" = "Найдено $1 заметок";
@@ -690,7 +690,7 @@
 "search_button" = "Найти";
 "search_placeholder" = "Начните вводить любое имя, название или слово";
 "results_zero" = "Ни одного результата";
-"results_one" = "Один результат";
+"results_one" = "$1 результат";
 "results_few" = "$1 результата";
 "results_many" = "$1 результатов";
 "results_other" = "$1 результатов";
@@ -841,7 +841,7 @@
 "info_uploaded_by" = "Загрузил";
 "info_upload_date" = "Дата загрузки";
 "videos_zero" = "Нет видео";
-"videos_one" = "Одна видеозапись";
+"videos_one" = "$1 видеозапись";
 "videos_few" = "$1 видеозаписи";
 "videos_many" = "$1 видеозаписей";
 "videos_other" = "$1 видеозаписей";
@@ -891,7 +891,7 @@
 "audio_embed_processing_bait" = "Всё равно хочу воспроизвести";
 
 "audios_count_zero" = "Нет аудиозаписей";
-"audios_count_one" = "Одна аудиозапись";
+"audios_count_one" = "$1 аудиозапись";
 "audios_count_few" = "$1 аудиозаписи";
 "audios_count_many" = "$1 аудиозаписей";
 "audios_count_other" = "$1 аудиозаписей";
@@ -950,13 +950,13 @@
 "add_audio_verb" = "Добавить аудиозаписи";
 
 "minutes_count_zero" = "длится ноль минут";
-"minutes_count_one" = "длится одну минуту";
+"minutes_count_one" = "длится $1 минуту";
 "minutes_count_few" = "длится $1 минуты";
 "minutes_count_many" = "длится $1 минут";
 "minutes_count_other" = "длится $1 минут";
 
 "listens_count_zero" = "нет прослушиваний";
-"listens_count_one" = "одно прослушивание";
+"listens_count_one" = "$1 прослушивание";
 "listens_count_few" = "$1 прослушивания";
 "listens_count_many" = "$1 прослушиваний";
 "listens_count_other" = "$1 прослушиваний";
@@ -1002,7 +1002,7 @@
 "audio_ctx_show_count" = "Показать пагинатор";
 
 "is_x_audio_zero" = "Нету аудиозаписей";
-"is_x_audio_one" = "Всего одна аудиозапись.";
+"is_x_audio_one" = "Всего $1 аудиозапись.";
 "is_x_audio_few" = "Всего $1 аудиозаписи.";
 "is_x_audio_many" = "Всего $1 аудиозаписей.";
 "is_x_audio_other" = "Всего $1 аудиозаписей.";
@@ -1085,7 +1085,7 @@
 "usages_left" = "Осталось использований";
 "points_transfer_dialog_header_1" = "Вы можете отправить в подарок или передать часть голосов другому человеку.";
 "points_transfer_dialog_header_2" = "Ваш текущий баланс:";
-"points_amount_one" = "1 голос";
+"points_amount_one" = "$1 голос";
 "points_amount_few" = "$1 голоса";
 "points_amount_many" = "$1 голосов";
 "points_amount_other" = "$1 голосов";
@@ -1125,12 +1125,12 @@
 "gift" = "Подарок";
 "gifts" = "Подарки";
 "gifts_zero" = "Нет подарков";
-"gifts_one" = "Один подарок";
+"gifts_one" = "$1 подарок";
 "gifts_few" = "$1 подарка";
 "gifts_many" = "$1 подарков";
 "gifts_other" = "$1 подарков";
 "gifts_left" = "$1 осталось";
-"gifts_left_one" = "Один подарок остался";
+"gifts_left_one" = "$1 подарок остался";
 "gifts_left_few" = "$1 подарка осталось";
 "gifts_left_many" = "$1 подарков осталось";
 "gifts_left_other" = "$1 подарков осталось";
@@ -1146,7 +1146,7 @@
 "free_gift" = "Бесплатно";
 "coins" = "Голоса";
 "coins_zero" = "0 голосов";
-"coins_one" = "Один голос";
+"coins_one" = "$1 голос";
 "coins_few" = "$1 голоса";
 "coins_many" = "$1 голосов";
 "coins_other" = "$1 голосов";
@@ -1339,7 +1339,7 @@
 "poll_editor_tips" = "Нажатие Backspace в пустом варианте приводит к его удалению. Tab/Enter в последнем добавляет новый.";
 "poll_embed" = "Получить код";
 "poll_voter_count_zero" = "Будьте <b>первым</b>, кто проголосует!";
-"poll_voter_count_one" = "В опросе проголосовал <b>один</b> человек.";
+"poll_voter_count_one" = "В опросе проголосовал <b>$1</b> человек.";
 "poll_voter_count_few" = "В опросе проголосовало <b>$1</b> человека.";
 "poll_voter_count_many" = "В опросе проголосовало <b>$1</b> человек.";
 "poll_voter_count_other" = "В опросе проголосовало <b>$1</b> человек.";
@@ -1357,12 +1357,12 @@
 /* Discussions */
 
 "discussions" = "Обсуждения";
-"messages_one" = "Одно сообщение";
+"messages_one" = "$1 сообщение";
 "messages_few" = "$1 сообщения";
 "messages_many" = "$1 сообщений";
 "messages_other" = "$1 сообщений";
 "topic_messages_count_zero" = "В теме нет сообщений";
-"topic_messages_count_one" = "В теме одно сообщение";
+"topic_messages_count_one" = "В теме $1 сообщение";
 "topic_messages_count_few" = "В теме $1 сообщения";
 "topic_messages_count_many" = "В теме $1 сообщений";
 "topic_messages_count_other" = "В теме $1 сообщений";
@@ -1378,7 +1378,7 @@
 "pin_topic" = "Закрепить тему";
 "close_topic" = "Закрыть тему";
 "delete_topic" = "Удалить тему";
-"topics_one" = "Одна тема";
+"topics_one" = "$1 тема";
 "topics_few" = "$1 темы";
 "topics_many" = "$1 тема";
 "topics_other" = "$1 тем";
@@ -1870,7 +1870,7 @@
 
 "bl_count_zero_desc" = "В вашем чёрном списке ещё нет пользователей.";
 "bl_count_zero" = "В вашем чёрном списке нет пользователей";
-"bl_count_one" = "В вашем чёрном списке один пользователь";
+"bl_count_one" = "В вашем чёрном списке $1 пользователь";
 "bl_count_few" = "В вашем чёрном списке $1 пользователя";
 "bl_count_many" = "В вашем чёрном списке $1 пользователей";
 "bl_count_other" = "В вашем чёрном списке $1 пользователей";
@@ -2422,7 +2422,7 @@
 "faves_photos_empty_tip" = "Здесь будут отображаться понравившиеся Вам фотографии.";
 "faves_videos_empty_tip" = "Здесь будут отображаться понравившиеся Вам видео.";
 "faves_zero" = "Ни одной закладки";
-"faves_one" = "Одна закладка";
+"faves_one" = "$1 закладка";
 "faves_few" = "$1 закладки";
 "faves_many" = "$1 закладок";
 "faves_other" = "$1 закладок";
